# Job-Market-Scraper

./: .dockerignore  .env.example  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: deploy.yml
backend/: README.md  pyproject.toml  run_api.py  run_cli.py
backend/src/core/: logging_config.py
backend/src/models/: job_model.py
backend/tests/filters/: test_initial_job_filter.py  test_query_expander.py  test_search_time_filter.py
backend/tests/models/: test_job_model.py
frontend/: README.md  package-lock.json  package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: JobResultsTable.tsx  LanguageSelector.tsx  ProfileForm.tsx  SkillSummary.tsx  TooltipHelpIcon.tsx
frontend/src/config/: languages.ts  site.ts
frontend/src/context/: LanguageContext.tsx
frontend/src/hooks/: useJobSearch.ts  useTranslations.ts
frontend/src/locales/: about.ts  docs.ts  footer.ts  header.ts  home.ts  index.ts  privacy.ts  translations.ts  ui.ts
frontend/src/styles/: globals.css
frontend/src/types/: Job.ts
frontend/src/utils/: pct.ts
src/core/: logging_config.py
src/core/builders/: query_builder.py
src/core/contracts/: job_search_interface.py  page_scraper_interface.py
src/core/factories/: service_factory.py
src/core/filters/: initial_job_filter.py  query_expander.py  (+1 more)
src/filters/: job_filters.py  query_expander.py  search_time_filter.py
src/models/: job_model.py
src/services/: base.py
tests/filters/: test_initial_job_filter.py  test_job_filters.py  test_query_expander.py  test_search_time_filter.py
tests/services/: test_base.py
(+66 files in other folders)
